--- a/app/templates/profile/update.html
+++ b/app/templates/profile/update.html
@@ -1,8 +1,16 @@
 {% extends 'base.html' %}
 {% import 'bootstrap/wtf.html' as wtf %}
 
+{% block styles%}{{super()}}
+ <link
+   rel="stylesheet"
+   href="{{url_for('static',filename='css/profile.css')}}"
+ />
+{%endblock%}
+
 {% block content %}
-<div class="container">
+<div class="container" id="update">
+
   {{wtf.quick_form(form)}}
 </div>
 {% endblock %}
