--- a/app/static/css/profile.css
+++ b/app/static/css/profile.css
@@ -1,10 +1,15 @@
 /* Profile syling */
-.pro{
+.pro {
     float: none;
     display: block;
     margin: auto;
-    width: 60%; 
+    width: 20px; 
+    height: 20px;
     border-radius: 50% !important;  
+}
+.pro img{
+    width: 20px;
+    height: 20px;
 }
 input[type="file"]{
     background-color: transparent;
